# wordle

./: .gitignore  Cargo.toml  HONOR-CODE.md  LICENSE  README.md  a.json  作业文档.md
src/: all_state.rs  basic_function.rs  calculate_average.rs  interactive_mode.rs  json_parse.rs  main.rs  solver.rs  test_mode.rs  tui.rs
tests/cases/: 07_03_invalid_json_format.before.json
