[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0.83"
console = "0.15"
rand = "0.8.5"
text_io = "0.1.12"
structopt = "0.3.26"
serde = { version = "1.0.144", features = ["derive"] }
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.9"
colored = "2.0.0"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"
rand = "0.8.5"
